
CHANGELOG

for libalf, libAMoRE (local branch for libAMoRE++), libAMoRE++,
liblangen, libmVCA and finite-automata-tools.

all those tools are released together and share their
version numbers until further notice.



HEAD (today)
------------

- libAMoRE: Fixed memory leak in enfa2nfa.c
- libAMoRE++: Added new class amore_monoids to capture AMoRE's monoid
              functionality
- libAMoRE++: Added function get_transitions that returs the transitions as they
              are stored in the AMoRE structs.
- libAMoRE++: Consider epsilon-transitions in finite_automaton::negative_sink()
              this fixes recognition of non-sink-states as sink-states in
              visualize().
- libAMoRE++: Added copy constructur for NFA and DFA
- libAMoRE++: Added method to remove epsilon transitions
- libAMoRE++: Determize does now handle NFA with epsilon transitions correctly
              (now these transitions are first removed)


v0.3   (2011-04-08 17:00:00)
----------------------------
svn-revision 1490

- Better install routines and versioning of objects
- Compilation on Windows improved
- A lot of cleanup and bugfixes
- All libraries: try to use better style to avoid cluttering namespace and other
	library-related problems. this includes:
	- avoiding "using namespace std" in headers
	- checking/removing all warnings that occur
	- serialization framework
	- regular memory profiling, including for leaks
	- if possible, use <const_iterator>s instead of <iterator>s
	- using const keyword for functions that don't change anything
- libalf: refactor of conjectures
- libalf: New (generic) statistic type
- libalf: New algorithm Rivest&Schapire (Angluin L* variant)
- libalf: Extended algorithms to support learning of mealy-machines,
	not just finite automata:
	- angluin_simple_table
	- angluin_col_table
	- rivest_schapire_table
	- biermann_original
- libalf: Critical bug in Kearns&Vazirani algorithm fixed